Updated to use new Resonite style UI panel instead of the legacy panel

--- a/ResoniteComponentSearchWizard/ResoniteComponentSearchWizard.csproj
+++ b/ResoniteComponentSearchWizard/ResoniteComponentSearchWizard.csproj
@@ -48,6 +48,7 @@
       <HintPath>G:\SteamLibrary\steamapps\common\Resonite\Libraries\ResoniteModLoader.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ValueTuple" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ResoniteComponentSearchWizard.cs" />
